<resources>
    <string name="app_name">ISUS</string>

    <string name="get_permission_fail">禁止读写手机存储，可能会导致某些功能无法使用！！请在设置中赋予该权限！</string>
    <string name="device_error">设别类型错误，请重新配置</string>
    <string name="ic_reader_error">读卡器类型错误，不支持自动识别，需在CMDB配置页指定读卡器类型</string>
    <string name="warning">警告</string>
    <string name="warning_reset">重置后将会清除数据，您需要重新设置软件。</string>
    <string name="init_dialog_title">正在初始化&#8230;</string>

    <string name="config_title">配置</string>
    <string name="config_device_id">设备ID</string>
    <string name="config_cmdb">CMDB ID: %s</string>
    <string name="config_sid">学校ID: %s</string>
    <string name="config_server">边缘云服务器地址：%s</string>
    <string name="config_platform_api">平台服务器地址：%s</string>
    <string name="config_platform_att">附件服务器地址：%s</string>
    <string name="config_platform_static">静态服务器地址：%s</string>
    <string name="config_platform_mq">MQ地址：%s</string>
    <string name="config_iam_package">IAM配置：%s</string>
    <string name="config_comet">推送地址：</string>
    <string name="config_device_type">设备类型：%s</string>

    <string name="device_type_vision_phone">可视电话</string>
    <string name="device_type_selfie">自拍机</string>
    <string name="device_type_badge">班牌</string>
    <string name="device_type_security">校园安全控制台</string>
    <string name="device_type_swipe">刷卡机</string>

    <string name="external_syslog">Log发送地址</string>
    <string name="external_school_name">学校名</string>
    <string name="external_voip_gateway">语音网关</string>
    <string name="external_voip_stun">语音网关转发设备</string>
    <string name="external_self_lan_ip">设备内网IP</string>
    <string name="external_self_wan_ip">设备外网IP</string>
    <string name="external_m_key">密码</string>
    <string name="external_s_key">密匙</string>

    <string name="btn_reset">重置</string>

    <string name="description_qr_image">设备ID二维码</string>

    <string name="device_init_title">设备初始化</string>
    <string name="device_init_cmdb_id_tip">CMDB ID:</string>
    <string name="device_init_cmdb_id">请输入CMDB ID</string>
    <string name="device_init_school_id_tip">学校 ID:</string>
    <string name="device_init_school_id">请输入学校 ID</string>
    <string name="device_init_pass_code_tip">授权码:</string>
    <string name="device_init_pass_code">请输入授权码</string>
    <string name="device_init_domain_tip">服务器地址:</string>
    <string name="device_init_domain">请输入服务器地址</string>
    <string name="device_init_pem_tip">证书下载地址:</string>
    <string name="device_init_pem">请输入证书下载地址</string>

    <string name="isus_button_ok">确定</string>
    <string name="user_sync_title">用户信息同步</string>
    <string name="user_sync_tip">用户信息同步中...</string>
    <string name="progress_text">%d%%</string>

    <string name="rebind_class">修改班级</string>
    <string name="system_setting">系统设置</string>
    <string name="sync_config">同步设置</string>
    <string name="reset">应用重置</string>
    <string name="reboot">系统重启</string>
    <string name="sleep">待机</string>
    <string name="connection_success">连接正常</string>
    <string name="connection_failed">连接失败</string>
    <string name="connection_unknown">无法判断</string>
    <string name="connection_detection">重新检测</string>
    <string name="diag_cdn">边缘云</string>
    <string name="diag_platform">平台</string>
    <string name="cdn_version">版本号：%s</string>
    <string name="current_class">当前班级</string>
    <string name="choose_education_type">选择学段</string>
    <string name="choose_grade">选择年级</string>
    <string name="choose_class">选择班级</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="ibeacon">iBeacon广播</string>
</resources>
