<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootCl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rebindLayout"
        android:layout_width="@dimen/x830"
        android:layout_height="@dimen/x850"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/white_corner_rect">
        <View
            android:id="@+id/titleBg"
            android:layout_width="0dp"
            android:layout_height="@dimen/x57"
            android:background="@drawable/purple_top_corner_rect"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/titleBg"
            app:layout_constraintBottom_toBottomOf="@id/titleBg"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/x20"
            android:textSize="@dimen/xs16"
            android:textColor="@color/title_black"
            android:text="@string/rebind_class"/>
        <TextView
            android:id="@+id/currentClassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titleBg"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginStart="@dimen/x20"
            android:textColor="@color/title_text_gray"
            android:textSize="@dimen/xs20"
            android:text="@string/current_class"/>
        <TextView
            android:id="@+id/currentClass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/currentClassTitle"
            app:layout_constraintBottom_toBottomOf="@id/currentClassTitle"
            app:layout_constraintStart_toEndOf="@id/currentClassTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/x15"
            android:layout_marginEnd="@dimen/x20"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/xs20"
            android:textColor="@color/blue"
            tools:text="2023级88班"/>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginEnd="@dimen/x20"
            android:paddingVertical="@dimen/x6"
            android:paddingHorizontal="@dimen/x20"
            android:text="@string/save"
            android:textSize="@dimen/xs14"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            app:layout_constraintTop_toTopOf="@id/save"
            app:layout_constraintBottom_toBottomOf="@id/save"
            app:layout_constraintEnd_toStartOf="@id/save"
            android:layout_marginEnd="@dimen/x20"
            android:paddingVertical="@dimen/x6"
            android:paddingHorizontal="@dimen/x20"
            android:text="@string/cancel"
            android:textSize="@dimen/xs14"
            android:textColor="@color/title_gray"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>